--- a/.github/workflows/arduino.yml
+++ b/.github/workflows/arduino.yml
@@ -57,7 +57,10 @@ jobs:
         run: |
           arduino-cli core update-index
           arduino-cli core install $
+      
+      - name: Install libraries
+        run: arduino-cli lib install "FastLED"
       # Finally, we compile the sketch, using the FQBN that was set
       # in the build matrix.
       - name: Compile Sketch
-        run: arduino-cli compile --fqbn $ ./Blink --warnings more
+        run: arduino-cli compile --fqbn $ ./AnimatedMatrix --warnings more
