--- a/.github/workflows/arduino.yml
+++ b/.github/workflows/arduino.yml
@@ -56,11 +56,11 @@ jobs:
       - name: Install platform
         run: |
           arduino-cli core update-index
-          arduino-cli core install $
+          arduino-cli core install ${{ matrix.arduino-platform }}
       
       - name: Install libraries
         run: arduino-cli lib install "FastLED"
       # Finally, we compile the sketch, using the FQBN that was set
       # in the build matrix.
       - name: Compile Sketch
-        run: arduino-cli compile --fqbn $ ./AnimatedMatrix --warnings more
+        run: arduino-cli compile --fqbn ${{ matrix.arduino-platform }} ./AnimatedMatrix --warnings more
