--- a/.github/workflows/arduino.yml
+++ b/.github/workflows/arduino.yml
@@ -63,4 +63,4 @@ jobs:
       # Finally, we compile the sketch, using the FQBN that was set
       # in the build matrix.
       - name: Compile Sketch
-        run: arduino-cli compile --fqbn ${{ matrix.arduino-platform }} ./AnimatedMatrix --warnings more
+        run: arduino-cli compile --fqbn ${{ matrix.fqbn }} ./AnimatedMatrix --warnings more
